--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,50 @@
+amqp==5.1.1
 argon2-cffi==21.3.0
 argon2-cffi-bindings==21.2.0
 asgiref==3.5.2
 async-timeout==4.0.2
 backports.zoneinfo==0.2.1
+billiard==3.6.4.0
+celery==5.2.7
 certifi==2022.9.24
 cffi==1.15.1
 channels==4.0.0
 charset-normalizer==2.1.1
+click==8.1.3
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.2.0
 Deprecated==1.2.13
+distlib==0.3.4
 Django==4.1.2
 django-ckeditor==6.5.1
 django-cors-headers==3.13.0
 django-environ==0.9.0
 django-js-asset==2.0.0
-django-queryset-csv==1.1.0
 django-redis==5.2.0
 django-storages==1.13.1
 djangorestframework==3.14.0
+filelock==3.7.1
 idna==3.4
+kombu==5.2.4
 packaging==21.3
+Pillow==9.2.0
+platformdirs==2.5.2
+prompt-toolkit==3.0.31
 psycopg2==2.9.4
 psycopg2-binary==2.9.4
 pycparser==2.21
 pyparsing==3.0.9
 pytz==2022.5
+raven==6.10.0
 redis==4.3.4
 requests==2.28.1
+six==1.16.0
 sqlparse==0.4.3
-unicodecsv==0.14.1
+tzdata==2022.2
 urllib3==1.26.12
+vine==5.0.0
+virtualenv==20.15.1
+wcwidth==0.2.5
 whitenoise==6.2.0
 wrapt==1.14.1
